--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam omnis consequuntur quidem voluptate reprehenderit vero, tenetur fuga accusamus dignissimos eveniet non harum ipsa, explicabo praesentium iste voluptatibus qui minima sunt?</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam omnis consequuntur quidem voluptate reprehenderit vero, tenetur fuga accusamus dignissimos eveniet non harum ipsa, explicabo praesentium iste voluptatibus qui minima sunt?</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam omnis consequuntur quidem voluptate reprehenderit vero, tenetur fuga accusamus dignissimos eveniet non harum ipsa, explicabo praesentium iste voluptatibus qui minima sunt?</p>
+    </div>
 </body>
 </html>
