--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My third website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam omnis consequuntur quidem voluptate reprehenderit vero, tenetur fuga accusamus dignissimos eveniet non harum ipsa, explicabo praesentium iste voluptatibus qui minima sunt?</p>
     </div>
+    <div>
+        <h3>You have to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"meaningfull name"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
