add first image

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>GitHub launched in 2008 after spending</h3>
+        <img src="images/github-1024x555.png" alt="github image">
+    </div>
 </body>
 </html>
